--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "dotenv": "^16.4.7",
     "mongoose": "^8.10.1"
   }
